Bug#17263: incorrect DROP query in temporary tables replication accounting non-ai32 in tmpkeyval. This changeset is supposed to be specifically for 4.1. Another changeset is going to push into 5.

sql/sql_base.cc:
  correction due to uint4korr definition: can not sizeof on not ia32.